--- a/landingPage.html
+++ b/landingPage.html
@@ -185,7 +185,7 @@
       <a href="https://www.facebook.com/EGG-CARE-108439847975103"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
       <a href="https://www.instagram.com/egg_care/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
       <a href="https://twitter.com/egg_care"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
-      <a href="mailTo:eggcare.products19@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+      <a href="mailTo:eggcareproducts@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a>
     </div>
   </div>
 </footer>
