--- a/landingPage.html
+++ b/landingPage.html
@@ -6,6 +6,7 @@
   <title>EGG CARE</title>
   <link rel="icon" href="img/landing.png">
   <link href="css/landingStyle.css" rel="stylesheet" type="text/css" >
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 </head>
