--- a/landingPage.html
+++ b/landingPage.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="img/landing.png">
   <link href="css/landingStyle.css" rel="stylesheet" type="text/css" >
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 </head>
 <style>
 </style>
