--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -15,7 +15,7 @@
    <div class="rightSection">
   <button class="selected" onclick="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</button></div>
    <div class="rightSection">
-   <div class="selected2">Welcome, <span id="username"></span></div>
+   <div class="selected2"><i class="fa fa-user"></i> Welcome, <span id="username"></span></div>
                <span id="group"> 
                  <button class="selected1" onclick="window.location='#modalRemainder'">
                   <i class="fa fa-bell"></i> 
