--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -11,8 +11,8 @@
 </head>
 <body>
   <nav>
-   <a class="links logo" href="#"> EGG CARE </a>
-   <div class="rightSection">
+  <a class="links logo" href="#"><img src="img/logo.PNG" height="40" width="40"></a
+  <div class="rightSection">
   <button class="selected" onclick="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</button></div>
    <div class="rightSection">
    <div class="selected2"><i class="fa fa-user"></i> Welcome, <span id="username"></span></div>
