--- a/landingPage.html
+++ b/landingPage.html
@@ -16,7 +16,7 @@
   <div class="content">
     <div class="header" id="header">
       <div class="nav">
-       <label><img id="logo" src=img/eggcarelogo-1.png>&nbsp<h3>EGG<span>CARE</span></h3></label>
+       <label><img src="img/logo2.PNG" height="40" width="40"></label>
        <div class="switchs">
         <button class="log" id="log" onclick="location.href='#';"><i class="fa fa-home"></i> Home</button>
         <button class="log" id="log" onclick="location.href='#about';"><i class="fa fa-info-circle"></i> About</button><button class="log" id="log" onclick="location.href='#services';"><i class="fa fa-cog"></i> Services</button>
