--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <nav>
-  <a class="links logo" href="#"><img src="img/logo.PNG" height="40" width="40"></a
+      <a class="links logo" href="#"><img src="img/logo.PNG" height="40" width="40"></a>
   <div class="rightSection">
   <button class="selected" onclick="logout()"><i class="fa fa-sign-out" aria-hidden="true"></i> Logout</button></div>
    <div class="rightSection">
