--- a/mainDashboard.html
+++ b/mainDashboard.html
@@ -47,7 +47,7 @@
         <div class="button_box">
             <button id="temp" onclick="refresh(1)">Temperature</button>
             <button id="humidity" onclick="refresh(2)">Humidity</button>
-            <button id="gas" onclick="refresh(3)">gas</button>
+            <button id="gas" onclick="refresh(3)">Gas</button>
         </div>
         <div class="value_box">
             <img id="image">
