--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
  </div>
  <div class="signup">
      <h2>To Create an Account -> <a href="registration.html"><b>SignUp</b></a></h2>
-     <h2><a href="reset-password.html"><b>forget password</b></a></h2>
+     <h2><a href="reset-password.html"><b>forgot password</b></a></h2>
  </div>
  </center>
  </div>
