--- a/landingPage.html
+++ b/landingPage.html
@@ -155,8 +155,8 @@
       </div></center> 
     </div>
     <div class="profile">
-      <center> <img src="img/aarthi.jpg" class="profile-img4">
-        <h3 class="user-name">Aarthi N</h3>
+      <center> <img src="img/baghisree.jfif" class="profile-img4">
+        <h3 class="user-name">Baghisree U</h3>
         <h5>Customer Relationship</h5><br>
         <div class="social_media">
           <a href="https://www.facebook.com/EGG-CARE-108439847975103"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
